# morpheus

./: .gitignore  Makefile  PRD.md  README.md  pyproject.toml
docs/: chatgpt-app.md  desktop.md  omnipresence-mini-app.md  omnipresence-prd.md  omnipresence.md
morpheus/: __init__.py  __main__.py  activity.py  ask.py  brief.py  cli.py  config.py  context.py  core.py  daemon.py  dashboard.py  db.py  detect.py  feeds.py  goals.py  intro.py  iterm_client.py  judge.py  ledger.py  loops.py  mcp_server.py  memory.py  mission_brief.py  mission_graph.py  naming.py  notifier.py  omni_templates.py  prd_runs.py  push.py  rain.py  recall_eval.py  remote.py  signals.py  tenant.py  trigger.py
morpheus/desktop/: __init__.py  agents.py  bridge.py  server.py
morpheus/desktop/electron/: README.md  entitlements.mac.plist  main.js  package.json  preload.js
morpheus/desktop/web/: app.js  app.test.mjs  index.html  styles.css
plugins/: README.md
plugins/g2-bridge/: README.md  morpheus-plugin.json  package-lock.json  package.json
plugins/g2-bridge/docs/: hardening.md  morpheus-native-prd.md
plugins/parakeet-mlx/: README.md  morpheus-plugin.json  pyproject.toml
plugins/parakeet-mlx/morpheus_parakeet/: __init__.py  stream_jsonl.py
tests/: test_activity.py  test_cli_activity.py  test_cli_broadcast.py  test_cli_feeds.py  test_cli_omni.py  test_core.py  test_daemon.py  test_dashboard.py  test_db_resume.py  test_desktop_agents.py  test_desktop_bridge.py  test_desktop_server.py  test_desktop_web.py  test_feeds.py  test_goals.py  test_intro.py  test_iterm_client.py  test_judge.py  test_loops.py  test_mcp_server.py  test_memory.py  test_prd_runs.py  test_push.py  test_rain.py  test_recall_eval.py  test_remote.py  test_remote_spawn.py  test_signals.py  test_tenant.py
tests/fixtures/: claude_stream.jsonl
(+16 files in other folders)
